--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,8 @@
 :root {
   --background: #f5f5f5;
   --foreground: #1a1a1a;
-  --primary: #549080;
+  /*--primary:#439943; */
+   --primary: #549080; 
   --accent: #FA9C46;
   --surface: #ffffff;
   --surface-muted: #efefef;
@@ -31,5 +32,16 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.primary-btn{
+  background: var(--primary);
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  border-radius: 8px;
+  padding: 10px 24px;
+  font-weight: 600;
+  transition: all .2s;
 }
 
