--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,6 +6,7 @@
   --muted: #666666;
   --surface: #ffffff;
   --surface-muted: #efefef;
+  --black:#000;
   font-family: var(--font-base, var(--font-geist-sans));
   min-height: 100vh;
   display: flex;
@@ -18,7 +19,7 @@
   width: 100%;
   max-width: 1400px;
   margin: 0 auto;
-  padding: 48px 24px 96px;
+  /* padding: 48px 24px 96px; */
   display: flex;
   flex-direction: column;
   gap: 48px;
@@ -148,7 +149,7 @@ a.secondary {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 5px 24px;
+  padding: 10px 24px;
   border-bottom: 1px solid rgba(0,0,0,0.06);
   position: sticky;
   top: 0;
@@ -165,12 +166,17 @@ a.secondary {
 .nav ul {
   list-style: none;
   display: flex;
-  gap: 20px;
+  gap: 35px;
 }
 
 .nav a {
-  color: var(--muted);
+  color: var(--black);
   font-weight: 500;
+  line-height: 2rem;
+}
+.nav a:hover {
+  color: var(--primary);
+  text-decoration: underline;
 }
 
 .actions {
