--- a/src/components/RegisterModal.module.css
+++ b/src/components/RegisterModal.module.css
@@ -564,6 +564,10 @@
   }
 
   .closeButton {
-    font-size: 24px;
+    font-size: 18px;
+    top: 1px;
+    right: 4px;
+    width: 30px;
+    height: 30px;
   }
 }
