--- a/src/components/ClosingCreditCalculator.module.css
+++ b/src/components/ClosingCreditCalculator.module.css
@@ -37,6 +37,10 @@
 
 .calculatorIcon {
   font-size: 32px;
+  color: #549080;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sectionHeader h2 {
@@ -175,6 +179,10 @@
 .emoji {
   font-size: 28px;
   margin-left: 8px;
+  color: #549080;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .comparisonHeader p {
