--- a/src/app/seller/page.module.css
+++ b/src/app/seller/page.module.css
@@ -48,6 +48,8 @@
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
+  display: flex;
+  gap:.5rem
 }
 
 .ctaButton:hover {
